<resources>
    <string name="title_activity_recipe" translatable="false">RecipeActivity</string>

    <string name="app_name">MyRecipes</string>
    <string name="action_settings">Settings</string>
    <string name="icons" translatable="false">Icons</string>
    <string name="dessert">Dessert</string>
    <string name="other">Other</string>
    <string name="meal">Meal</string>
    <string name="search">Search</string>
    <string name="search_hint">Search a recipe</string>
    <string name="undo">Undo</string>
    <string name="recipe_removed">Recipe removed</string>

    <string name="new_recipe">New Recipe</string>
    <string name="recipe_list">Recipe List</string>
    <string name="add_ingredient">Add an ingredient</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="add_step">Add a step</string>
    <string name="license">Licenses</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="image_url">Image URL</string>
    <string name="from_gallery">Gallery</string>
    <string name="from_camera">Camera</string>
    <string name="select_image">Select a picture</string>
    <string name="ingredient">Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="select_an_ingredient">Select an ingredient</string>
    <string name="ingredient_exists">This ingredient already exists</string>
    <string name="field_required">This field is required</string>
    <string name="recipe_saved">Recipe saved</string>

    <!-- UNITS -->
    <string name="milliliter">Milliliter</string>
    <string name="liter">Liter</string>
    <string name="unit">Unit</string>
    <string name="teaspoon">Teaspoon</string>
    <string name="tablespoon">Tablespoon</string>
    <string name="gramme">Gramme</string>
    <string name="kilogramme">Kilogramme</string>
    <string name="cup">Cup</string>

    <string name="milliliter_abrv">ml</string>
    <string name="liter_abrv">l</string>
    <string name="unit_abrv" translatable="false" />
    <string name="teaspoon_abrv">tsp</string>
    <string name="tablespoon_abrv">tbs</string>
    <string name="gramme_abrv">g</string>
    <string name="kilogramme_abrv">kg</string>
    <string name="cup_abrv">cp</string>

    <string name="milliliter_select">ml (Milliliter)</string>
    <string name="liter_select">l (Liter)</string>
    <string name="unit_select">Unit</string>
    <string name="teaspoon_select">tsp (Teaspoon)</string>
    <string name="tablespoon_select">tbs (Tablespoon)</string>
    <string name="gramme_select">g (Gramme)</string>
    <string name="kilogramme_select">kg (Kilogramme)</string>
    <string name="cup_select">cp (Cup)</string>

    <!-- Default Ingredient Names -->
    <string name="milk_name">Milk</string>
    <string name="water_name">Water</string>
    <string name="sugar_name">Sugar</string>
    <string name="butter_name">Butter</string>
    <string name="egg_name">Egg(s)</string>
    <string name="flour_name">Flour</string>
    <string name="no_selection">No item selected</string>
    <string name="salt_name">Salt</string>
    <string name="error_not_a_number">Please enter a correct number</string>
    <string name="enter_a_step">Enter a step</string>
    <string name="step_description">Step description</string>
    <string name="all_ingredients">All ingredients</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="choose_directory">Choose a directory</string>

    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>

    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="qrcode_explanation">If you scan the QRCode with the application, you will be able to import the recipe in your application of the app.</string>
    <string name="pdf_created">The PDF has been created</string>
    <string name="zip_created">An archive has been created</string>
    <string name="open">Open</string>
    <string name="no_viewer_found">No viewer found</string>
    <string name="scan_recipe">Scan recipe</string>
    <string name="import_failed">Something went wrong, please retry</string>
    <string name="pinch_abrv">pinch</string>
    <string name="pinch">Pinch</string>
    <string name="apple_name">Apple(s)</string>
    <string name="avocado_name">Avocado(es)</string>
    <string name="brown_sugar_name">Brown sugar</string>
    <string name="cheese_name">Cheese</string>
    <string name="chocolate_name">Chocolate</string>
    <string name="coconut_name">Coconut(s)</string>
    <string name="coffee_name">Coffee</string>
    <string name="hazelnut_name">Hazelnut(s)</string>
    <string name="honey_name">Honey</string>
    <string name="nuts_name">Nuts</string>
    <string name="peanut_name">Peanut(s)</string>
    <string name="pear_name">Pear(s)</string>
    <string name="pepper_name">Pepper</string>
    <string name="potato_name">Potato(es)</string>
    <string name="raspberry_name">Raspberry</string>
    <string name="strawberry_name">Strawberry</string>
    <string name="tomato_name">Tomato(es)</string>
    <string name="tomato_sauce_name">Tomato sauce</string>
    <string name="pinch_select">pinch</string>
    <string name="optional">Optional</string>
    <string name="close">Close</string>

    <string name="select_file">Select an app to open this file</string>
    <string name="share">Share</string>


    <plurals name="selected_recipes">
        <item quantity="other">%d recipes</item>
        <item quantity="one">%d recipe</item>
    </plurals>

    <string name="intro_text">Hi,\nI hope you\'ll enjoy this app.\nAs you can see, there is a couple of recipes that already are created. It\'ll let you to discover all functionalities.\nIf you don\'t like them, you can remove them by swiping on the left.\nIf you have an awesome feature you want to see on the app, or if you juste want to give me a feedback, you can contact me on </string>
    <string name="opensource_licenses">OpenSource Licenses</string>
    <string name="intro_text_license">Hi,\nI hope you enjoy this app.\nYou can remove the recipes by swiping on the left.\nIf you have an awesome feature you want to see on the app, or if you juste want to give me a feedback, you can contact me on </string>
    <string name="intro_text_got_to_license">You can see this message again by clicking on the "Licenses" menu</string>
    <string name="send_email">Send Email</string>
    <string name="welcome">Welcome</string>

    <string name="settings">Settings</string>
    <string name="ia_generation">Enable IA image generation</string>

    <string name="play_recipe_enable_text_reading">Enable text reading</string>
    <string name="play_recipe_enable_gesture_detection">Enable gesture detection\n👍 for next\n👎 for previous\n☝️ for repeating </string>

    <string name="billing_subscription">Yearly: %s</string>
    <string name="billing_one_time">For life: %s</string>
    <string name="billing_title">Premium feature</string>
    <string name="billing_become_premium">Become premium</string>
    <string name="billing_description">This feature is part of the premium features. <a href="">Click here</a> to see what is available in the premium version </string>
    <string name="billing_premium_feature_1">While you are in recipe play mode, you can control the recipe reading with gestures instead of tapping on buttons:\n\n👍 for next\n👎 for previous\n☝️ for repeating</string>
    <string name="billing_premium_feature_2">When you want to add a new recipe, you can directly import it from the web, just past the URL and the app will do the rest for you</string>
    <string name="billing_premium_feature_3">No need anymore to add image for you recipes. The premium features include a IA image generation that will generate the missing images for your recipes and your ingredients</string>


    <string name="default_1">
UEsDBBQACAgIAAJxalEAAAAAAAAAAAAAAAAAAAAAxdNNTgIxFAfwGRg+ZKHIyszqyQoIAQwb40bi
V2IiK0yMyw7z6FRLh/RD5QIeQY2n8SgewSNYRpFhb4aumtem/1/eSyul09hQEZs9ty4qd0P2BPiA
cq4jJigQEQIJQ9ARwpTx+w7cECnsyT70YWxmCuJJcgBMgY5jmJpx1P67DiqKDQ8hwMUraDdzmCBy
+0Cn6tbPKoMr1MA0SKYQGgdRv9fswHWEop3EzpBIDspQIhMKX91WQChhoppr8S0nWeVBzRvaUH8n
lOSRBByPut1E4bT+JalXPnRar+4qrnhOaUM1/e1UIFJq8zLuZC9vZS8pmTciXK81QtkCuJnDPAt7
W8K+jmuFCx4b6VdTssmiArnMaSVLe/+lfQR2midGa5T+bsoWJCXIZ44rWtzzsm+Xg1rhFonS4G0E
shzgJ1rIaPFH1gb482sKm6B9A1BLBwgZ48c0SwEAAL4EAABQSwECFAAUAAgICAACcWpRGePHNEsB
AAC+BAAAAAAAAAAAAAAAAAAAAAAAAAAAUEsFBgAAAAABAAEALgAAAHkBAAAAAA
    </string>
    <string name="default_2">
UEsDBBQACAgIABlxalEAAAAAAAAAAAAAAAAAAAAAjY/PSsNAEIfTpik1osR4UHrQIV40IE3Bqngx
f9CbIAgelY3drkvjJuxu0MfyGXwiH8HdNJD2kODedmZ+33xj21FRZBgStMSHhndg7z/QL5DvGCgj
HM8pZlI4Pe/EPk5KWTWQDgjVl7n6UwZCcloIp+959lGsOIAkTC8D+PmGBBY5h4vgfBbAB2WO6Udb
hn7ha+ha91le8rEz5+gTpRm+mUwWugKG3+YRDK8N/3GFMJzQHVX2p+Jsg1IZKsp/pANTEf2a+BK6
w7iUEvPx3hovrUpgVNujZtZ6KgnaPEDoCvS6DwhrxEituyNE6++uMTAh0G8naOGgJvzeKmG0VANg
ticGKjFrEtsxfUM8zRmSGAbdsasmtvOMGM0yBKsbrU7DP1BLBwg/FjLQIQEAAFgCAABQSwECFAAU
AAgICAAZcWpRPxYy0CEBAABYAgAAAAAAAAAAAAAAAAAAAAAAAAAAUEsFBgAAAAABAAEALgAAAE8B
AAAAAA
    </string>
    <string name="default_3">
UEsDBBQACAgIAC5xalEAAAAAAAAAAAAAAAAAAAAA4+J2z8xLTy1KKkpNTJFgUBLi4vPNrFBILUst
qizJAEoJMILEnBKzUxUSSxSMDAwObXAWYNLS4GQAAYd4ByHW8MSS1CIpgZSixPLEpJxUK339cpCI
AoMBowWDlglCJbdTUX55nkJxaXpikZQYkvokkHg8WFyB0YANqAvZfI/8vNRKFPMzQCIKTGCV6hCV
DB/shdhc09M1ijWl+JCUpqanKzAbMCMZmQ800i0nvxTVyWkgEQUWsJEyCCO5nTKTE4uS8vOAPlJg
NWAByoojWQgMF2AYKbCBJABQSwcIZqudsNcAAABLAQAAUEsBAhQAFAAICAgALnFqUWarnbDXAAAA
SwEAAAAAAAAAAAAAAAAAAAAAAAAAAFBLBQYAAAAAAQABAC4AAAAFAQAAAAA
    </string>
    <string name="generate_image">Generate image</string>
    <string name="custom_prompt">Custom prompt</string>
    <string name="update_ingredient">Update ingredient</string>
    <string name="reset_image">Reset image</string>
    <string name="type">Type</string>
    <string name="export_all_recipes">Export all recipes</string>
    <string name="generate_now">Generate now</string>
    <string name="recipe_url">Recipe Url</string>
    <string name="data_extraction_error">An error occurred. It may happen, please retry</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="play_recipe_step_position">Position of step while playing the recipe</string>
    <string name="play_recipe_step_position_first">Before ingredients</string>
    <string name="play_recipe_step_position_last">After ingredients</string>
    <string name="database_export_failed">Failed to expote the database</string>
    <string name="database_import_failed">Failed to import database</string>
    <string name="export_database">Export database</string>
    <string name="import_database">Import database</string>
    <string name="import_database_warning">Warning! Importing a new database will overwrite your actual data</string>
    <string name="database_import_succeeded">Import succeeded</string>
    <string name="database_export_succeeded">Export succeeded</string>
    <string name="set_up_recognition">Set up gesture recognition</string>
    <string name="gesture_sensibility_close_label">Close</string>
    <string name="gesture_sensibility_far_label">Far</string>
    <string name="gesture_sensibility_title">Gesture sensibility</string>

</resources>


