<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/ic_image_24dp"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:id="@+id/imageUrl">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_url"
                android:singleLine="true"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:lines="1"
                android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/from_camera"
            app:icon="@drawable/ic_baseline_photo_camera_24"
            app:layout_constraintEnd_toStartOf="@+id/gallery"
            app:layout_constraintTop_toBottomOf="@+id/imageUrl" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/from_gallery"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/ic_baseline_collections_24" />
</androidx.constraintlayout.widget.ConstraintLayout>