<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@android:color/background_light"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/appbar_padding_top"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:title="@string/app_name"/>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:name="zelgius.com.myrecipes.fragments.RecipeFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:context=".fragments.ListFragment"
                tools:listitem="@layout/fragment_recipe"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
            android:id="@+id/addIngredientLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:layout_gravity="bottom|end"
            app:layout_behavior="zelgius.com.myrecipes.views.MoveUpwardBehavior"
            android:padding="8dp"
            android:visibility="gone">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_ingredient"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_carrot_solid"
                android:tint="@android:color/white"
                app:fabSize="mini"/>
    </LinearLayout>


    <LinearLayout
            android:id="@+id/addStepLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            app:layout_behavior="zelgius.com.myrecipes.views.MoveUpwardBehavior"
            android:padding="8dp"
            android:layout_gravity="bottom|end"
            android:visibility="gone">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_step"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/addStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="-90"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_shoe_prints_solid"
                android:tint="@android:color/white"
                app:fabSize="mini"/>
    </LinearLayout>


    <zelgius.com.myrecipes.views.FloatingActionMenu
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:layout_behavior="zelgius.com.myrecipes.views.MoveUpwardBehavior"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/ic_playlist_plus"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:fabSize="normal"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>